# BasicDataStuctures

./: README.md  pyproject.toml
BasicDataStructure/: _binary_tree.py  _graph.py  _heap.py  _stack.py  _trie.py
BasicDataStructures/: __init__.py  _binary_tree.py  _single_linked_list.py
