[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "BasicDataStructure"
version = "0.1.0b1"
description = "Python version common data structures for LeetCode problems: graphs, heaps, stacks, tries, union-find, and more."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "ZhouZhiyang", email = "mr.zhiyangzhou@gmail.com"}
]

[tool.setuptools.packages.find]
where = ["."]